[package]
name = "mod-mapper"
version = "0.1.0"
authors = ["Tyler Hallada <tyler@hallada.net>"]
edition = "2018"
description = "Saves Skyrim mod cell edits to a database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
chrono = { version = "0.4", features = ["serde"] }
compress-tools = "0.14"
dotenv = "0.15"
futures = "0.3"
humansize = "2.1"
infer = { version = "0.13", default-features = false }
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.16"
seahash = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "migrate", "chrono", "json"] }
skyrim-cell-dump = "0.4"
tempfile = "3.5"
tokio = { version = "1.27", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
# Need this unicode fix: https://github.com/muja/unrar.rs/commit/3af9a6015dc89c1329a2fe5d6f4a7f69ded8ba1d
unrar = { git = "https://github.com/muja/unrar.rs.git" }
walkdir = "2"
zip = "0.6"
